--- a/index.html
+++ b/index.html
@@ -1,62 +1,126 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="./resources/ol.css">
-        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
-        <style>
-        html, body {
-            background-color: #ffffff;
-        }
-        .ol-control > * {
-            background-color: #f8f8f8!important;
-            color: #444444!important;
-            border-radius: 0px;
-        }
-        .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
-            color: #444444!important;
-        }
-        .search-layer-input-search {
-            background-color: #f8f8f8!important;
-        }
-        .ol-control > *:focus, .ol-control >*:hover {
-            background-color: rgba(248, 248, 248, 0.7)!important;
-        } 
-        .ol-control {
-            background-color: rgba(255,255,255,.4) !important;
-            padding: 2px !important;
-        } 
-        </style>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <style>
-        #map {
-            width: 866px;
-            height: 783px;
+  <link rel="stylesheet" href="./resources/ol.css">
+  <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+  <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+  <link rel="stylesheet" href="./resources/qgis2web.css">
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #ffffff;
+    }
+
+    #map {
+      width: 100vw;
+      height: 100vh;
+    }
+
+    #bulanNDVI {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1000;
+      background: white;
+      padding: 5px;
+      font-size: 14px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+
+    .ol-control > * {
+      background-color: #f8f8f8!important;
+      color: #444444!important;
+      border-radius: 0px;
+    }
+
+    .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
+      color: #444444!important;
+    }
+
+    .search-layer-input-search {
+      background-color: #f8f8f8!important;
+    }
+
+    .ol-control > *:focus, .ol-control >*:hover {
+      background-color: rgba(248, 248, 248, 0.7)!important;
+    } 
+
+    .ol-control {
+      background-color: rgba(255,255,255,.4) !important;
+      padding: 2px !important;
+    } 
+  </style>
+
+  <title>Peta NDVI</title>
+</head>
+<body>
+
+  <select id="bulanNDVI">
+    <option value="NDVI_01_2024_2">Januari 2024</option>
+    <option value="NDVI_02_2024_3">Februari 2024</option>
+    <option value="NDVI_03_2024_4">Maret 2024</option>
+  </select>
+
+  <div id="map">
+    <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
+    </div>
+  </div>
+
+  <script src="resources/qgis2web_expressions.js"></script>
+  <script src="./resources/functions.js"></script>
+  <script src="./resources/ol.js"></script>
+  <script src="./resources/ol-layerswitcher.js"></script>
+  <script src="layers/Administrasi_Kecamatan_1.js"></script>
+  <script src="layers/NDVI_01_2024_2.js"></script>
+  <script src="layers/NDVI_02_2024_3.js"></script>
+  <script src="layers/NDVI_03_2024_4.js"></script>
+  <script src="styles/Administrasi_Kecamatan_1_style.js"></script>
+  <script src="styles/NDVI_01_2024_2_style.js"></script>
+  <script src="styles/NDVI_02_2024_3_style.js"></script>
+  <script src="styles/NDVI_03_2024_4_style.js"></script>
+  <script src="./layers/layers.js" type="text/javascript"></script> 
+  <script src="./resources/Autolinker.min.js"></script>
+  <script src="./resources/qgis2web.js"></script>
+
+  <script>
+    // Tunggu sampai map dan layers sudah tersedia
+    window.onload = function () {
+      const layerNDVI_Jan = layersList.find(l => l.get('title').includes('NDVI_01_2024'));
+      const layerNDVI_Feb = layersList.find(l => l.get('title').includes('NDVI_02_2024'));
+      const layerNDVI_Mar = layersList.find(l => l.get('title').includes('NDVI_03_2024'));
+
+      const ndviLayers = {
+        'NDVI_01_2024_2': layerNDVI_Jan,
+        'NDVI_02_2024_3': layerNDVI_Feb,
+        'NDVI_03_2024_4': layerNDVI_Mar
+      };
+
+      // Set default: hanya Januari aktif
+      for (const key in ndviLayers) {
+        ndviLayers[key].setVisible(key === 'NDVI_01_2024_2');
+      }
+
+      // Handle dropdown perubahan bulan
+      document.getElementById('bulanNDVI').addEventListener('change', function () {
+        const selected = this.value;
+        for (const key in ndviLayers) {
+          ndviLayers[key].setVisible(key === selected);
         }
-        </style>
-        <title></title>
-    </head>
-    <body>
-        <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
-            </div>
-        </div>
-        <script src="resources/qgis2web_expressions.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/Administrasi_Kecamatan_1.js"></script><script src="layers/NDVI_01_2024_2.js"></script><script src="layers/NDVI_02_2024_3.js"></script><script src="layers/NDVI_03_2024_4.js"></script>
-        <script src="styles/Administrasi_Kecamatan_1_style.js"></script><script src="styles/NDVI_01_2024_2_style.js"></script><script src="styles/NDVI_02_2024_3_style.js"></script><script src="styles/NDVI_03_2024_4_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>
-    </body>
+      });
+    }
+  </script>
+</body>
 </html>
