--- a/index.html
+++ b/index.html
@@ -1,132 +1,114 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="initial-scale=1, user-scalable=no, maximum-scale=1, width=device-width">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="./resources/ol.css">
+    <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+    <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+    <link rel="stylesheet" href="./resources/qgis2web.css">
 
-  <title>Peta NDVI</title>
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="./resources/ol.css">
-  <link rel="stylesheet" href="./resources/fontawesome-all.min.css">
-  <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-  <link rel="stylesheet" href="./resources/qgis2web.css">
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #ffffff;
-    }
-
-    #map {
-      width: 100vw;
-      height: 100vh;
-    }
-
-    #bulanNDVI, #checkboxNDVI {
-      position: absolute;
-      left: 10px;
-      z-index: 1000;
-      background: white;
-      padding: 5px 10px;
-      font-size: 14px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-
-    #bulanNDVI {
-      top: 10px;
-    }
-
-    #checkboxNDVI {
-      top: 50px;
-    }
-
-    .ol-control > * {
-      background-color: #f8f8f8 !important;
-      color: #444444 !important;
-      border-radius: 0px;
-    }
-
-    .ol-attribution a,
-    .gcd-gl-input::placeholder,
-    .search-layer-input-search::placeholder {
-      color: #444444 !important;
-    }
-
-    .search-layer-input-search {
-      background-color: #f8f8f8 !important;
-    }
-
-    .ol-control > *:focus,
-    .ol-control > *:hover {
-      background-color: rgba(248, 248, 248, 0.7) !important;
-    }
-
-    .ol-control {
-      background-color: rgba(255, 255, 255, .4) !important;
-      padding: 2px !important;
-    }
-  </style>
-</head>
-<body>
-  <!-- Dropdown Bulan -->
-  <select id="bulanNDVI">
-    <option value="">Pilih Bulan</option>
-    <option value="januari">Januari</option>
-    <option value="februari">Februari</option>
-    <option value="maret">Maret</option>
-    <!-- Tambahkan bulan lainnya sesuai kebutuhan -->
-  </select>
-
-  <!-- Checkbox NDVI -->
-  <div id="checkboxNDVI">
-    <label><input type="checkbox" id="ndviLayerCheckbox"> Tampilkan NDVI</label>
-  </div>
-
-  <!-- Kontainer Peta -->
-  <div id="map"></div>
-
-  <!-- Scripts -->
-  <script src="./resources/ol.js"></script>
-  <script src="./resources/ol-layerswitcher.js"></script>
-  <script src="./layers/layers.js"></script>
-  <script src="./resources/qgis2web_expressions.js"></script>
-  <script src="./resources/qgis2web.js"></script>
-
-  <!-- Script interaktif -->
-  <script>
-    const ndviLayer = window.ndviLayer; // Asumsikan layer NDVI disiapkan di layers.js
-    const ndviCheckbox = document.getElementById('ndviLayerCheckbox');
-    const bulanSelect = document.getElementById('bulanNDVI');
-
-    ndviCheckbox.addEventListener('change', () => {
-      if (ndviLayer) {
-        ndviLayer.setVisible(ndviCheckbox.checked);
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
       }
-    });
 
-    bulanSelect.addEventListener('change', () => {
-      const selectedMonth = bulanSelect.value;
-      // Contoh: ganti URL layer berdasarkan bulan (harus disesuaikan dengan struktur Anda)
-      if (selectedMonth && ndviLayer) {
-        const newSource = new ol.source.TileWMS({
-          url: `https://geoserver.example.com/geoserver/wms`,
-          params: {
-            'LAYERS': `ndvi:${selectedMonth}`,
-            'TILED': true
-          },
-          serverType: 'geoserver',
+      #map {
+        width: 100vw;
+        height: 100vh;
+      }
+
+      #bulanNDVI {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 1000;
+        background: white;
+        padding: 5px 10px;
+        font-size: 14px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+      }
+
+      .ol-control > * {
+        background-color: #f8f8f8!important;
+        color: #444444!important;
+      }
+
+      .ol-control {
+        background-color: rgba(255,255,255,.4) !important;
+        padding: 2px !important;
+      }
+    </style>
+
+    <title>Peta NDVI Dinamis</title>
+  </head>
+
+  <body>
+    <!-- Dropdown Bulan -->
+    <select id="bulanNDVI">
+      <option value="NDVI_01_2024_2">Januari 2024</option>
+      <option value="NDVI_02_2024_3">Februari 2024</option>
+      <option value="NDVI_03_2024_4">Maret 2024</option>
+    </select>
+
+    <!-- Map -->
+    <div id="map">
+      <div id="popup" class="ol-popup">
+        <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+        <div id="popup-content"></div>
+      </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="resources/qgis2web_expressions.js"></script>
+    <script src="./resources/functions.js"></script>
+    <script src="./resources/ol.js"></script>
+    <script src="./resources/ol-layerswitcher.js"></script>
+
+    <!-- Layers dan Styles -->
+    <script src="layers/Administrasi_Kecamatan_1.js"></script>
+    <script src="layers/NDVI_01_2024_2.js"></script>
+    <script src="layers/NDVI_02_2024_3.js"></script>
+    <script src="layers/NDVI_03_2024_4.js"></script>
+    <script src="styles/Administrasi_Kecamatan_1_style.js"></script>
+    <script src="styles/NDVI_01_2024_2_style.js"></script>
+    <script src="styles/NDVI_02_2024_3_style.js"></script>
+    <script src="styles/NDVI_03_2024_4_style.js"></script>
+    <script src="./layers/layers.js" type="text/javascript"></script> 
+    <script src="./resources/Autolinker.min.js"></script>
+    <script src="./resources/qgis2web.js"></script>
+
+    <!-- Script Interaktif: NDVI Bulanan -->
+    <script>
+      window.onload = function () {
+        // Ambil semua layer NDVI
+        const ndviLayers = {
+          'NDVI_01_2024_2': layersList.find(l => l.get('title') === 'NDVI_01_2024_2'),
+          'NDVI_02_2024_3': layersList.find(l => l.get('title') === 'NDVI_02_2024_3'),
+          'NDVI_03_2024_4': layersList.find(l => l.get('title') === 'NDVI_03_2024_4')
+        };
+
+        // Atur hanya layer pertama yang aktif
+        for (const key in ndviLayers) {
+          ndviLayers[key].setVisible(key === 'NDVI_01_2024_2');
+        }
+
+        // Saat bulan dipilih, ganti layer yang aktif
+        document.getElementById('bulanNDVI').addEventListener('change', function () {
+          const selected = this.value;
+          for (const key in ndviLayers) {
+            ndviLayers[key].setVisible(key === selected);
+          }
         });
-        ndviLayer.setSource(newSource);
-      }
-    });
-  </script>
-</body>
+      };
+    </script>
+  </body>
 </html>
