--- a/index.html
+++ b/index.html
@@ -1,201 +1,208 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NDVI Monitoring</title>
-  
-  <!-- Load only necessary OL CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.3.0/ol.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <title>Peta NDVI Interaktif</title>
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="./resources/ol.css">
+  <link rel="stylesheet" href="./resources/fontawesome-all.min.css">
+  <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+  <link rel="stylesheet" href="./resources/qgis2web.css">
+
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       width: 100%;
       height: 100%;
-      font-family: Arial, sans-serif;
+      background-color: #ffffff;
     }
+
     #map {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
     }
-    #controls {
+
+    #kontrolNDVI {
       position: absolute;
       top: 10px;
       left: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
       z-index: 1000;
-    }
-    #legend {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
       background: white;
-      padding: 10px;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      z-index: 1000;
-    }
-    .legend-item {
-      display: flex;
-      align-items: center;
-      margin: 5px 0;
-    }
-    .legend-color {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-      border: 1px solid #333;
-    }
-    .ol-popup {
-      position: absolute;
-      background-color: white;
-      padding: 10px;
+      padding: 6px 10px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      bottom: 12px;
-      left: -50px;
-      min-width: 200px;
+      display: flex;
+      gap: 8px;
+      align-items: center;
     }
-    .ol-popup:after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -10px;
-      border-width: 10px;
-      border-style: solid;
-      border-color: white transparent transparent transparent;
+
+    #kontrolNDVI input[type="range"] {
+      width: 150px;
     }
-    .ol-popup-closer {
+
+    #legendNDVI {
       position: absolute;
-      top: 2px;
-      right: 8px;
-      text-decoration: none;
-      color: #666;
+      bottom: 10px;
+      left: 10px;
+      background: white;
+      padding: 8px 12px;
+      font-size: 12px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      z-index: 1000;
+    }
+
+    .ol-control > * {
+      background-color: #f8f8f8 !important;
+      color: #444 !important;
+    }
+
+    .ol-control {
+      background-color: rgba(255, 255, 255, 0.4) !important;
+      padding: 2px !important;
     }
   </style>
 </head>
+
 <body>
-  <div id="map"></div>
-  
-  <div id="controls">
-    <div>
-      <label for="month-select">Pilih Bulan:</label>
-      <select id="month-select">
-        <option value="NDVI_01_2024_2">Januari 2024</option>
-        <option value="NDVI_02_2024_3">Februari 2024</option>
-        <option value="NDVI_03_2024_4">Maret 2024</option>
-      </select>
-    </div>
-    <div style="margin-top: 10px;">
-      <label>Tampilkan NDVI:</label><br>
-      <input type="checkbox" id="low" checked> <label for="low">Rendah (0-0.2)</label><br>
-      <input type="checkbox" id="medium" checked> <label for="medium">Sedang (0.2-0.4)</label><br>
-      <input type="checkbox" id="high" checked> <label for="high">Tinggi (0.4-0.6)</label><br>
-      <input type="checkbox" id="vhigh" checked> <label for="vhigh">Sangat Tinggi (>0.6)</label>
-    </div>
-  </div>
-  
-  <div id="legend">
-    <div class="legend-item"><div class="legend-color" style="background: #d73027;"></div><span>Rendah</span></div>
-    <div class="legend-item"><div class="legend-color" style="background: #fc8d59;"></div><span>Sedang</span></div>
-    <div class="legend-item"><div class="legend-color" style="background: #fee08b;"></div><span>Tinggi</span></div>
-    <div class="legend-item"><div class="legend-color" style="background: #91cf60;"></div><span>Sangat Tinggi</span></div>
-    <div class="legend-item"><div class="legend-color" style="background: #1a9850;"></div><span>Optimal</span></div>
-  </div>
-  
-  <div id="popup" class="ol-popup">
-    <a href="#" id="popup-closer" class="ol-popup-closer">×</a>
-    <div id="popup-content"></div>
+
+  <!-- Kontrol Slider dan Play -->
+  <div id="kontrolNDVI">
+    <button id="playPauseBtn">▶️</button>
+    <input type="range" id="sliderNDVI" min="1" max="3" step="1" value="1">
+    <span id="bulanLabel">Januari 2024</span>
   </div>
 
-  <!-- Load only necessary JS -->
-  <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
+  <!-- Legend -->
+  <div id="legendNDVI">
+    <strong>Legenda NDVI</strong>
+    <div id="legendContent"></div>
+  </div>
+
+  <!-- Map -->
+  <div id="map">
+    <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="./resources/qgis2web_expressions.js"></script>
+  <script src="./resources/functions.js"></script>
+  <script src="./resources/ol.js"></script>
+  <script src="./resources/ol-layerswitcher.js"></script>
+  <script src="./resources/Autolinker.min.js"></script>
+
+  <!-- Layers & Styles -->
+  <script src="./layers/Administrasi_Kecamatan_1.js"></script>
+  <script src="./layers/NDVI_01_2024_2.js"></script>
+  <script src="./layers/NDVI_02_2024_3.js"></script>
+  <script src="./layers/NDVI_03_2024_4.js"></script>
+  <script src="./styles/Administrasi_Kecamatan_1_style.js"></script>
+  <script src="./styles/NDVI_01_2024_2_style.js"></script>
+  <script src="./styles/NDVI_02_2024_3_style.js"></script>
+  <script src="./styles/NDVI_03_2024_4_style.js"></script>
+  <script src="./layers/layers.js"></script>
+  <script src="./resources/qgis2web.js"></script>
+
+  <!-- Interaksi NDVI -->
   <script>
-    // Initialize map
-    const map = new ol.Map({
-      target: 'map',
-      layers: [],
-      view: new ol.View({
-        center: ol.proj.fromLonLat([110.5, -7.0]),
-        zoom: 9
-      })
-    });
+    window.onload = function () {
+      const ndviLayers = {
+        'NDVI_01_2024_2': layersList.find(l => l.get('title') === 'NDVI_01_2024_2'),
+        'NDVI_02_2024_3': layersList.find(l => l.get('title') === 'NDVI_02_2024_3'),
+        'NDVI_03_2024_4': layersList.find(l => l.get('title') === 'NDVI_03_2024_4')
+      };
 
-    // Load layers (simplified example - replace with your actual layer loading)
-    const layers = {
-      'NDVI_01_2024_2': new ol.layer.Tile({ /* your layer config */ }),
-      'NDVI_02_2024_3': new ol.layer.Tile({ /* your layer config */ }),
-      'NDVI_03_2024_4': new ol.layer.Tile({ /* your layer config */ })
-    };
+      const bulanMap = {
+        1: { id: 'NDVI_01_2024_2', label: 'Januari 2024' },
+        2: { id: 'NDVI_02_2024_3', label: 'Februari 2024' },
+        3: { id: 'NDVI_03_2024_4', label: 'Maret 2024' }
+      };
 
-    // Add administrative layer (kecamatan)
-    const kecamatanLayer = new ol.layer.Vector({
-      source: new ol.source.Vector({
-        url: 'path/to/kecamatan.geojson',
-        format: new ol.format.GeoJSON()
-      }),
-      style: new ol.style.Style({
-        stroke: new ol.style.Stroke({
-          color: 'rgba(0, 0, 0, 0.5)',
-          width: 1
-        }),
-        fill: new ol.style.Fill({
-          color: 'rgba(0, 0, 0, 0)'
-        })
-      })
-    });
-    map.addLayer(kecamatanLayer);
+      let currentMonth = 1;
+      let playInterval = null;
 
-    // Popup handling
-    const popup = new ol.Overlay({
-      element: document.getElementById('popup'),
-      autoPan: true
-    });
-    map.addOverlay(popup);
-    
-    document.getElementById('popup-closer').onclick = function() {
-      popup.setPosition(undefined);
-      return false;
-    };
+      const slider = document.getElementById('sliderNDVI');
+      const label = document.getElementById('bulanLabel');
+      const playBtn = document.getElementById('playPauseBtn');
 
-    // Click interaction for kecamatan info
-    map.on('singleclick', function(evt) {
-      const feature = map.forEachFeatureAtPixel(evt.pixel, function(feature) {
-        return feature;
-      });
-      
-      if (feature && feature.get('nama_kecamatan')) {
-        const coordinate = evt.coordinate;
-        const content = `
-          <h4>${feature.get('nama_kecamatan')}</h4>
-          <p>NDVI: ${feature.get('ndvi_value') || 'N/A'}</p>
-        `;
-        document.getElementById('popup-content').innerHTML = content;
-        popup.setPosition(coordinate);
-      } else {
-        popup.setPosition(undefined);
+      for (const key in ndviLayers) {
+        ndviLayers[key].setVisible(key === bulanMap[currentMonth].id);
       }
-    });
 
-    // Month selection handler
-    document.getElementById('month-select').addEventListener('change', function() {
-      const selectedMonth = this.value;
-      // Implement your layer switching logic here
-      console.log('Selected month:', selectedMonth);
-    });
+      function updateLayer(monthNum) {
+        const selected = bulanMap[monthNum];
+        for (const key in ndviLayers) {
+          ndviLayers[key].setVisible(key === selected.id);
+        }
+        label.textContent = selected.label;
+        updateLegend(selected.id);
+      }
 
-    // NDVI category filter handler
-    document.querySelectorAll('#controls input[type="checkbox"]').forEach(checkbox => {
-      checkbox.addEventListener('change', function() {
-        // Implement your NDVI category filtering here
-        console.log('Filter changed:', this.id, this.checked);
+      slider.addEventListener('input', () => {
+        currentMonth = parseInt(slider.value);
+        updateLayer(currentMonth);
       });
-    });
+
+      playBtn.addEventListener('click', () => {
+        if (playInterval) {
+          clearInterval(playInterval);
+          playInterval = null;
+          playBtn.textContent = '▶️';
+        } else {
+          playInterval = setInterval(() => {
+            currentMonth = currentMonth < 3 ? currentMonth + 1 : 1;
+            slider.value = currentMonth;
+            updateLayer(currentMonth);
+          }, 2000);
+          playBtn.textContent = '⏸️';
+        }
+      });
+
+      // Fungsi update legenda
+      function updateLegend(layerId) {
+        const legendBox = document.getElementById('legendContent');
+        const legends = {
+          'NDVI_01_2024_2': [
+            { color: '#d73027', label: '0.2 - 0.3 (Rendah)' },
+            { color: '#fdae61', label: '0.3 - 0.4' },
+            { color: '#a6d96a', label: '0.4 - 0.6' },
+            { color: '#1a9850', label: '> 0.6 (Tinggi)' }
+          ],
+          'NDVI_02_2024_3': [
+            { color: '#ffffcc', label: 'Rendah' },
+            { color: '#c2e699', label: 'Sedang' },
+            { color: '#78c679', label: 'Tinggi' },
+            { color: '#238443', label: 'Sangat Tinggi' }
+          ],
+          'NDVI_03_2024_4': [
+            { color: '#f7fcf5', label: 'Rendah' },
+            { color: '#c7e9c0', label: 'Sedang' },
+            { color: '#41ab5d', label: 'Tinggi' },
+            { color: '#005a32', label: 'Sangat Tinggi' }
+          ]
+        };
+
+        legendBox.innerHTML = '';
+        legends[layerId].forEach(item => {
+          legendBox.innerHTML += `
+            <div>
+              <span style="display:inline-block;width:15px;height:10px;background:${item.color};margin-right:6px;"></span>${item.label}
+            </div>`;
+        });
+      }
+
+      // Inisialisasi
+      updateLegend(bulanMap[currentMonth].id);
+    };
   </script>
 </body>
 </html>
