--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>Peta NDVI Interaktif</title>
+  <title>Peta NDVI per Bulan</title>
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="./resources/ol.css">
-  <link rel="stylesheet" href="./resources/fontawesome-all.min.css">
-  <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-  <link rel="stylesheet" href="./resources/qgis2web.css">
+  <link rel="stylesheet" href="./resources/ol.css" />
+  <link rel="stylesheet" href="./resources/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="./resources/ol-layerswitcher.css" />
+  <link rel="stylesheet" href="./resources/qgis2web.css" />
 
   <style>
     html, body {
@@ -20,7 +16,6 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      background-color: #ffffff;
     }
 
     #map {
@@ -28,79 +23,86 @@
       height: 100vh;
     }
 
-    #kontrolNDVI {
+    #bulanNDVI {
       position: absolute;
       top: 10px;
       left: 10px;
       z-index: 1000;
       background: white;
       padding: 6px 10px;
+      font-size: 14px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      display: flex;
-      gap: 8px;
-      align-items: center;
     }
 
-    #kontrolNDVI input[type="range"] {
-      width: 150px;
-    }
-
-    #legendNDVI {
+    .ol-popup {
       position: absolute;
-      bottom: 10px;
-      left: 10px;
-      background: white;
-      padding: 8px 12px;
-      font-size: 12px;
-      border-radius: 4px;
+      background-color: white;
+      padding: 10px;
       border: 1px solid #ccc;
-      z-index: 1000;
+      bottom: 12px;
+      left: -50px;
+      min-width: 200px;
     }
 
-    .ol-control > * {
-      background-color: #f8f8f8 !important;
-      color: #444 !important;
+    .ol-popup-closer {
+      text-decoration: none;
+      position: absolute;
+      top: 2px;
+      right: 8px;
     }
 
-    .ol-control {
-      background-color: rgba(255, 255, 255, 0.4) !important;
-      padding: 2px !important;
+    .ol-popup:after, .ol-popup:before {
+      top: 100%;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+    }
+
+    .ol-popup:after {
+      border-top-color: white;
+      border-width: 10px;
+      left: 48px;
+      margin-left: -10px;
+    }
+
+    .ol-popup:before {
+      border-top-color: #ccc;
+      border-width: 11px;
+      left: 48px;
+      margin-left: -11px;
     }
   </style>
 </head>
 
 <body>
+  <!-- Dropdown Bulan -->
+  <select id="bulanNDVI">
+    <option value="NDVI_01_2024_2">Januari 2024</option>
+    <option value="NDVI_02_2024_3">Februari 2024</option>
+    <option value="NDVI_03_2024_4">Maret 2024</option>
+  </select>
 
-  <!-- Kontrol Slider dan Play -->
-  <div id="kontrolNDVI">
-    <button id="playPauseBtn">▶️</button>
-    <input type="range" id="sliderNDVI" min="1" max="3" step="1" value="1">
-    <span id="bulanLabel">Januari 2024</span>
-  </div>
-
-  <!-- Legend -->
-  <div id="legendNDVI">
-    <strong>Legenda NDVI</strong>
-    <div id="legendContent"></div>
-  </div>
-
-  <!-- Map -->
+  <!-- Map & Popup -->
   <div id="map">
     <div id="popup" class="ol-popup">
-      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <a href="#" id="popup-closer" class="ol-popup-closer">✖</a>
       <div id="popup-content"></div>
     </div>
   </div>
 
-  <!-- Scripts -->
-  <script src="./resources/qgis2web_expressions.js"></script>
-  <script src="./resources/functions.js"></script>
+  <!-- Script Library -->
   <script src="./resources/ol.js"></script>
   <script src="./resources/ol-layerswitcher.js"></script>
+  <script src="./resources/qgis2web_expressions.js"></script>
+  <script src="./resources/functions.js"></script>
   <script src="./resources/Autolinker.min.js"></script>
+  <script src="./resources/qgis2web.js"></script>
 
-  <!-- Layers & Styles -->
+  <!-- Layer & Style -->
   <script src="./layers/Administrasi_Kecamatan_1.js"></script>
   <script src="./layers/NDVI_01_2024_2.js"></script>
   <script src="./layers/NDVI_02_2024_3.js"></script>
@@ -110,98 +112,82 @@
   <script src="./styles/NDVI_02_2024_3_style.js"></script>
   <script src="./styles/NDVI_03_2024_4_style.js"></script>
   <script src="./layers/layers.js"></script>
-  <script src="./resources/qgis2web.js"></script>
 
-  <!-- Interaksi NDVI -->
+  <!-- Logic Interaktif -->
   <script>
     window.onload = function () {
+      const mapElement = document.getElementById("map");
+      const popupContainer = document.getElementById("popup");
+      const popupContent = document.getElementById("popup-content");
+      const closer = document.getElementById("popup-closer");
+
+      const overlay = new ol.Overlay({
+        element: popupContainer,
+        autoPan: true,
+        autoPanAnimation: { duration: 250 }
+      });
+
+      map.addOverlay(overlay);
+
+      closer.onclick = function () {
+        overlay.setPosition(undefined);
+        closer.blur();
+        return false;
+      };
+
+      // Ambil semua layer NDVI
       const ndviLayers = {
-        'NDVI_01_2024_2': layersList.find(l => l.get('title') === 'NDVI_01_2024_2'),
-        'NDVI_02_2024_3': layersList.find(l => l.get('title') === 'NDVI_02_2024_3'),
-        'NDVI_03_2024_4': layersList.find(l => l.get('title') === 'NDVI_03_2024_4')
+        "NDVI_01_2024_2": layersList.find(l => l.get("title") === "NDVI_01_2024_2"),
+        "NDVI_02_2024_3": layersList.find(l => l.get("title") === "NDVI_02_2024_3"),
+        "NDVI_03_2024_4": layersList.find(l => l.get("title") === "NDVI_03_2024_4")
       };
 
-      const bulanMap = {
-        1: { id: 'NDVI_01_2024_2', label: 'Januari 2024' },
-        2: { id: 'NDVI_02_2024_3', label: 'Februari 2024' },
-        3: { id: 'NDVI_03_2024_4', label: 'Maret 2024' }
-      };
-
-      let currentMonth = 1;
-      let playInterval = null;
-
-      const slider = document.getElementById('sliderNDVI');
-      const label = document.getElementById('bulanLabel');
-      const playBtn = document.getElementById('playPauseBtn');
-
+      // Tampilkan hanya layer Januari saat awal
       for (const key in ndviLayers) {
-        ndviLayers[key].setVisible(key === bulanMap[currentMonth].id);
+        ndviLayers[key].setVisible(key === "NDVI_01_2024_2");
       }
 
-      function updateLayer(monthNum) {
-        const selected = bulanMap[monthNum];
+      const selectBulan = document.getElementById("bulanNDVI");
+
+      selectBulan.addEventListener("change", function () {
+        const selected = this.value;
         for (const key in ndviLayers) {
-          ndviLayers[key].setVisible(key === selected.id);
-        }
-        label.textContent = selected.label;
-        updateLegend(selected.id);
-      }
-
-      slider.addEventListener('input', () => {
-        currentMonth = parseInt(slider.value);
-        updateLayer(currentMonth);
-      });
-
-      playBtn.addEventListener('click', () => {
-        if (playInterval) {
-          clearInterval(playInterval);
-          playInterval = null;
-          playBtn.textContent = '▶️';
-        } else {
-          playInterval = setInterval(() => {
-            currentMonth = currentMonth < 3 ? currentMonth + 1 : 1;
-            slider.value = currentMonth;
-            updateLayer(currentMonth);
-          }, 2000);
-          playBtn.textContent = '⏸️';
+          ndviLayers[key].setVisible(key === selected);
         }
       });
 
-      // Fungsi update legenda
-      function updateLegend(layerId) {
-        const legendBox = document.getElementById('legendContent');
-        const legends = {
-          'NDVI_01_2024_2': [
-            { color: '#d73027', label: '0.2 - 0.3 (Rendah)' },
-            { color: '#fdae61', label: '0.3 - 0.4' },
-            { color: '#a6d96a', label: '0.4 - 0.6' },
-            { color: '#1a9850', label: '> 0.6 (Tinggi)' }
-          ],
-          'NDVI_02_2024_3': [
-            { color: '#ffffcc', label: 'Rendah' },
-            { color: '#c2e699', label: 'Sedang' },
-            { color: '#78c679', label: 'Tinggi' },
-            { color: '#238443', label: 'Sangat Tinggi' }
-          ],
-          'NDVI_03_2024_4': [
-            { color: '#f7fcf5', label: 'Rendah' },
-            { color: '#c7e9c0', label: 'Sedang' },
-            { color: '#41ab5d', label: 'Tinggi' },
-            { color: '#005a32', label: 'Sangat Tinggi' }
-          ]
-        };
+      // Klik pada fitur untuk tampilkan popup
+      map.on('singleclick', function (evt) {
+        const selectedLayerId = selectBulan.value;
+        const activeLayer = ndviLayers[selectedLayerId];
 
-        legendBox.innerHTML = '';
-        legends[layerId].forEach(item => {
-          legendBox.innerHTML += `
-            <div>
-              <span style="display:inline-block;width:15px;height:10px;background:${item.color};margin-right:6px;"></span>${item.label}
-            </div>`;
+        let found = false;
+
+        map.forEachFeatureAtPixel(evt.pixel, function (feature, layer) {
+          if (layer === activeLayer) {
+            const props = feature.getProperties();
+            popupContent.innerHTML = `
+              <strong>NDVI ${selectedBulanLabel(selectedLayerId)}</strong><br>
+              Mean: ${props._mean ?? 'n/a'}<br>
+              Min: ${props._min ?? 'n/a'}<br>
+              Max: ${props._max ?? 'n/a'}
+            `;
+            overlay.setPosition(evt.coordinate);
+            found = true;
+          }
         });
-      }
 
-      // Inisialisasi
-      updateLegend(bulanMap[currentMonth].id);
+        if (!found) {
+          overlay.setPosition(undefined);
+        }
+      });
+
+      function selectedBulanLabel(key) {
+        if (key === 'NDVI_01_2024_2') return 'Januari 2024';
+        if (key === 'NDVI_02_2024_3') return 'Februari 2024';
+        if (key === 'NDVI_03_2024_4') return 'Maret 2024';
+        return '';
+      }
     };
   </script>
 </body>
